# gcurtain

./: .gitignore  .rsync-filter  pyproject.toml
gcurtain/: __init__.py  __main__.py  calendar.py  cli.py  core.py  db.py  http.py  sync.py  trello.py  updater.py
tests/: test_gcurtain.py
